fix: изменнение z-index

--- a/src/widgets/ui/AuthModal/index.module.scss
+++ b/src/widgets/ui/AuthModal/index.module.scss
@@ -22,7 +22,7 @@
   border-radius: 40px;
   width: 100%;
   max-width: 800px;
-  z-index: 999;
+  z-index: 1000;
 
   &__header {
     display: flex;
